# src/routes/reviews/index.ts
@@ -1,15 +1,16 @@
 import { z } from 'zod';
 import express from 'express';
 import mongoose from 'mongoose';
+import * as zip from '../../lib/zip';
 import Logger from '../../common/logger';
-import * as error from '../../common/errors';
+import * as errors from '../../common/errors';
 import Comment from '../../models/Comment';
 import registerRoute from '../../lib/requests';
-import { IUser, IUserRole } from '../../models/User';
+import { IUser, IUserDocument, IUserRole } from '../../models/User';
 import Review, { IReviewStatus } from '../../models/Review';
 import { ObjectIdSchema } from '../../validators/requests';
 import { ICommentCreationSchema } from '../../validators/comments';
-import { IPublication } from '../../models/Publication';
+import { IPublication, IPublicationDocument } from '../../models/Publication';
 
 const router = express.Router();
 
@@ -29,7 +30,7 @@ registerRoute(router, '/:id/comment', {
 
         const review = await Review.findById(id)
             .populate<{ owner: IUser }>('owner')
-            .populate<{ publication: IPublication }>('publication')
+            .populate<{ publication: IPublicationDocument }>('publication')
             .exec();
 
         // Check that the review exists and that the current commenter isn't trying
@@ -42,7 +43,7 @@ registerRoute(router, '/:id/comment', {
         ) {
             return res.status(404).json({
                 status: 'error',
-                message: error.NON_EXISTENT_REVIEW,
+                message: errors.NON_EXISTENT_REVIEW,
             });
         }
 
@@ -73,7 +74,7 @@ registerRoute(router, '/:id/comment', {
 
                 return res.status(500).json({
                     status: 'error',
-                    message: error.INTERNAL_SERVER_ERROR,
+                    message: errors.INTERNAL_SERVER_ERROR,
                 });
             }
 
@@ -83,10 +84,49 @@ registerRoute(router, '/:id/comment', {
         // If either the filename or the anchor is present on the comment, we need
         // to check that they are valid for the current submission....
         if (typeof filename !== 'undefined') {
+            let archiveIndex = {
+                userId: review.publication.owner._id.toString(),
+                name: review.publication.name,
+                ...(!review.publication.current && { revision: review.publication.revision }),
+            };
+
+            const archive = zip.loadArchive(archiveIndex);
+
+            if (archive === null) {
+                return res.status(500).json({
+                    status: 'error',
+                    error: errors.INTERNAL_SERVER_ERROR,
+                });
+            }
+
+            // check that the given filename exists within the publication...
+            const entry = archive.getEntry(filename);
+
+            if (!entry) {
+                return res.status(400).json({
+                    status: 'error',
+                    error: errors.BAD_REQUEST,
+                    extra: {
+                        filename: "Filename path doesn't exist in the current archive.", // @@TODO: Use a ZodError here...
+                    },
+                });
+            }
+
+            // If the anchor is specified, check that the line range makes sense, we don't have to
+            // validate that both of the line numbers are semantically correct, but we do need to
+            // check that both values exist in the file.
             if (typeof anchor !== 'undefined') {
-                console.log('filename and anchor!');
-            } else {
-                console.log('just filename');
+                const lines = zip.countLines(entry.getData().toString());
+
+                if (anchor.start > lines || anchor.end > lines) {
+                    return res.status(400).json({
+                        status: 'error',
+                        error: errors.BAD_REQUEST,
+                        extra: {
+                            anchor: 'Anchor range is invalid.', // @@TODO: Use a ZodError here...
+                        },
+                    });
+                }
             }
         }
 
@@ -97,27 +137,82 @@ registerRoute(router, '/:id/comment', {
             replying,
             review: id,
             thread,
+            owner,
+            publication: review.publication.id as mongoose.Schema.Types.ObjectId,
         });
 
         try {
             await newComment.save();
+            const populated = await newComment.populate<{ owner: IUserDocument }[]>('owner');
 
             return res.status(201).json({
                 status: 'ok',
                 message: 'Created comment.',
-                comment: Comment.project(newComment),
+                comment: Comment.project(populated),
             });
         } catch (e) {
             Logger.error(e);
 
             return res.status(500).json({
                 status: 'error',
-                message: error.INTERNAL_SERVER_ERROR,
+                message: errors.INTERNAL_SERVER_ERROR,
             });
         }
     },
 });
 
+/**
+ *
+ */
+registerRoute(router, '/:id/comments', {
+    method: 'get',
+    query: z.object({}),
+    params: z.object({ id: ObjectIdSchema }),
+    permission: IUserRole.Default,
+    handler: async (req, res) => {
+        const { id } = req.params;
+        const { id: owner } = req.requester;
+
+        const review = await Review.findById(id)
+            .populate<{ owner: IUser }>('owner')
+            .populate<{ publication: IPublication }>('publication')
+            .exec();
+
+        // Check that the review exists and that the current commenter isn't trying
+        // to publish comments on a non-public review. Only a review owner can comment
+        // on a review whilst creating it.
+        if (
+            !review ||
+            (review.status === 'started' &&
+                (review.owner as unknown as IUser & { id: string }).id !== owner)
+        ) {
+            return res.status(404).json({
+                status: 'error',
+                message: errors.NON_EXISTENT_REVIEW,
+            });
+        }
+
+        // check that the publication isn't in draft mode...
+        if (review.publication.draft) {
+            return res.status(400).json({
+                status: 'error',
+                message: 'Cannot comment on a drafted publication.',
+            });
+        }
+
+        // Find all the comments on the current review.,,
+        const result = await Comment.find({ review: review.id })
+            .populate<{ owner: IUser }[]>('owner')
+            .exec();
+
+        const comments = result.map((link) => Comment.project(link as typeof result[number]));
+
+        return res.status(200).json({
+            status: true,
+            comments,
+        });
+    },
+});
 /**
  *
  */
@@ -137,11 +232,11 @@ registerRoute(router, '/:id/complete', {
         if (!review || review.owner.toString() !== ownerId) {
             return res.status(404).json({
                 status: 'error',
-                message: error.NON_EXISTENT_REVIEW,
+                message: errors.NON_EXISTENT_REVIEW,
             });
         }
 
-        await review.update({ $set: { status: IReviewStatus.Completed } }).exec();
+        await review.updateOne({ $set: { status: IReviewStatus.Completed } }).exec();
 
         return res.status(200).json({
             status: 'ok',
@@ -174,7 +269,7 @@ registerRoute(router, '/:id', {
         ) {
             return res.status(404).json({
                 status: 'error',
-                message: error.NON_EXISTENT_REVIEW,
+                message: errors.NON_EXISTENT_REVIEW,
             });
         }
 
@@ -202,7 +297,7 @@ registerRoute(router, '/:id', {
         if (!review) {
             return res.status(404).json({
                 status: 'error',
-                message: error.NON_EXISTENT_REVIEW,
+                message: errors.NON_EXISTENT_REVIEW,
             });
         }
 
